# multimodal-kuberay

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  Tiltfile  main.tf  opencode.json  outputs.tf  terraform.tfvars.example  variables.tf
.github/workflows/: nemotron-deps.yaml
assets/: custom.css
device/: .gitignore  README.md  filter.py  pipeline.py  pyproject.toml  streaming.py  train.py  voice.py
docs/: benchmark.md  chat-completions-and-agents.md
hack/: monitoring-values.yaml
hack/grafana-dashboards/: data_grafana_dashboard.json  dcgm_exporter_grafana_dashboard.json  default_grafana_dashboard.json  model_cache_grafana_dashboard.json  serve_deployment_grafana_dashboard.json  serve_grafana_dashboard.json  serve_llm_grafana_dashboard.json  train_grafana_dashboard.json
images/nemotron-deps/: Dockerfile
manifests/: akamai-custom.css  gateway.yaml  kustomization.yaml  mcp-arxiv-search.yaml  mcp-paper-to-text.yaml  model-upload-job.yaml  nemotron-model-cache.yaml  nemotron-parse.yaml  nemotron-warmup-job.yaml  openwebui.yaml  ray-podmonitor.yaml  rayservice-minimax.yaml  rayservice-nemotron-parse.yaml  rayservice-tts.yaml  rayservice.yaml
mcp/: arxiv_search_server.py  common.py  paper_to_text_server.py
scripts/: load-test.sh  minimax_parallel_benchmark.py  model-sync.sh  model-upload.sh  nuke-bucket.sh  prepare-deps-nemotron.sh  seed-streaming-config.sh  test-llm.sh  test-pipeline.sh  test-tts.sh  test-vision-llm.sh  test-ws-stream.py  warmup-nemotron.sh
serve/: mcp_research_pipeline.py  research_pipeline.py  tts_app.py
