[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "live-commentary"
version = "0.1.0"
description = "Live video → VLM → TTS streaming commentary client"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "opencv-python>=4.8",
    "httpx>=0.25",
    "sounddevice>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
ws = [
    "websocket-client>=1.6",
]
all = [
    "live-commentary[ws]",
]

[project.scripts]
live-commentary = "streaming:main"

[tool.setuptools]
py-modules = ["streaming"]
